--- a/index.html
+++ b/index.html
@@ -16,23 +16,23 @@
 			<header id="header" class="alt">
 				<div class="logo"><a href="index.html">
 					<img src="images/trash.png">
-					UnTrashed <span>a waste management project</span></a></div>
+					UnTrashed <span>Waste Managed</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
 		<!-- Nav -->
 			<nav id="menu">
 				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="#one">About</a></li>
+					<li><a href="#premap">Dustbins Nearby</a></li>
+					<li><a href="#three">TechStack</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/slide01.jpg" alt="" />
+					<img src="images/slide01.jpeg" alt="" />
 					<div class="inner">
 						<header>
 							<p>A Waste Management Project</p>
@@ -41,7 +41,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide02.jpg" alt="" />
+					<img src="images/slide02.jpeg" alt="" />
 					<div class="inner">
 						<header>
 							<p>Finding Solution to Everyday Problems</p>
@@ -50,7 +50,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide03.jpg"  alt="" />
+					<img src="images/slide03.jpeg"  alt="" />
 					<div class="inner">
 						<header>
 							<p>Finding Dustbins Near You</p>
@@ -59,7 +59,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide04.jpg"  alt="" />
+					<img src="images/slide04.jpeg"  alt="" />
 					<div class="inner">
 						<header>
 							<p>Making Dustbins Smarter</p>
@@ -68,7 +68,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide05.jpg"  alt="" />
+					<img src="images/slide05.jpeg"  alt="" />
 					<div class="inner">
 						<header>
 							<p>Cleaner Greener Solutions</p>
@@ -86,7 +86,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/pic02.jpeg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -105,7 +105,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/pic03.jpeg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -161,22 +161,22 @@
 					<div class="gallery">
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#"><img src="images/pic01.jpeg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="#"><img src="images/pic05.jpeg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#"><img src="images/pic03.jpeg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="#"><img src="images/pic04.jpeg" alt="" /></a>
 							</div>
 						</div>
 					</div>
@@ -196,6 +196,8 @@
 				</div>
 				<div class="copyright">
 					No &copy; UnTrashed. Just a Prototype. No Rights Reserved.
+					<br> Built by Team ImportError 
+					<div style="color: #111111">Pictures by Unsplash, Basic Design from Templated </div>
 				</div>
 			</footer>
 
