nearest dustbins in yellow

--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
 			<section id="premap" class="wrapper style5">
 				<div class="inner">
 					<header class="align-center">
-						<p>Zoom in and out to adjust  </p>
 						<h2 style="color: #ffffff; font-size: 3.0rem;">DUSTBINS NEAR YOU</h2>
+						<p id="dom" style="color: #ffffff;size: 2.5rem;">Zoom in and out to adjust  </p>
+						
 					</header>
 				</div>
 			</section>
